--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,8 +1,18 @@
 .Loading {
-    background: linear-gradient(to right, #0064df, #00b6e9);
+    background: rgb(31, 138, 192);
+    background: linear-gradient(
+        90deg,
+        rgba(31, 138, 192, 0.87718837535014) 12%,
+        rgba(31, 138, 192, 1) 86%
+    );
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.Loading img{
+    width: 400px;
+    height: 400px;
 }
