--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -10,10 +10,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #00c6ff;
-    background: -webkit-linear-gradient(to right, #0064df, #00b6e9);
-    background: linear-gradient(to right, #0064df, #00b6e9);
-
+    background: rgb(31, 138, 192);
+    background: linear-gradient(
+        90deg,
+        rgba(31, 138, 192, 0.87718837535014) 12%,
+        rgba(31, 138, 192, 1) 86%
+    );
     font-family: sans-serif;
     color: #fff;
 }
@@ -41,20 +43,20 @@
     align-items: center;
 }
 .tempDegreeSection p {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bold;
 }
 .tempDegreeSection span {
-    margin: 10px;
+    margin: 0 10px;
     font-size: 30px;
 }
 .temp-degree {
-    font-size: 40px;
+    font-size: 50px;
 }
 
 .cityName {
     display: block;
-    font-size: 2em;
+    font-size: 50px;
     margin-block-start: 0.67em;
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
